; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_necp_client_add_multipath_interface_flows.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_necp_client_add_multipath_interface_flows.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.necp_client_flow_registration = type { i32, %struct.mppcb* }
%struct.necp_client = type { i32 }
%struct.mppcb = type { i32 }

@PROC_NULL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.necp_client_flow_registration*, %struct.necp_client*, %struct.mppcb*)* @necp_client_add_multipath_interface_flows to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @necp_client_add_multipath_interface_flows(%struct.necp_client_flow_registration* %0, %struct.necp_client* %1, %struct.mppcb* %2) #0 {
  %4 = alloca %struct.necp_client_flow_registration*, align 8
  %5 = alloca %struct.necp_client*, align 8
  %6 = alloca %struct.mppcb*, align 8
  %7 = alloca i64, align 8
  store %struct.necp_client_flow_registration* %0, %struct.necp_client_flow_registration** %4, align 8
  store %struct.necp_client* %1, %struct.necp_client** %5, align 8
  store %struct.mppcb* %2, %struct.mppcb** %6, align 8
  %8 = load %struct.mppcb*, %struct.mppcb** %6, align 8
  %9 = load %struct.necp_client_flow_registration*, %struct.necp_client_flow_registration** %4, align 8
  %10 = getelementptr inbounds %struct.necp_client_flow_registration, %struct.necp_client_flow_registration* %9, i32 0, i32 1
  store %struct.mppcb* %8, %struct.mppcb** %10, align 8
  %11 = load %struct.mppcb*, %struct.mppcb** %6, align 8
  %12 = getelementptr inbounds %struct.mppcb, %struct.mppcb* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.necp_client_flow_registration*, %struct.necp_client_flow_registration** %4, align 8
  %15 = getelementptr inbounds %struct.necp_client_flow_registration, %struct.necp_client_flow_registration* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 8
  %16 = load %struct.necp_client*, %struct.necp_client** %5, align 8
  %17 = getelementptr inbounds %struct.necp_client, %struct.necp_client* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i64 @proc_find(i32 %18)
  store i64 %19, i64* %7, align 8
  %20 = load i64, i64* %7, align 8
  %21 = load i64, i64* @PROC_NULL, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %3
  br label %32

24:                                               ; preds = %3
  %25 = load i64, i64* %7, align 8
  %26 = load %struct.necp_client*, %struct.necp_client** %5, align 8
  %27 = load %struct.necp_client_flow_registration*, %struct.necp_client_flow_registration** %4, align 8
  %28 = call i32 @necp_flow_add_interface_flows(i64 %25, %struct.necp_client* %26, %struct.necp_client_flow_registration* %27, i32 1)
  %29 = load i64, i64* %7, align 8
  %30 = call i32 @proc_rele(i64 %29)
  %31 = load i64, i64* @PROC_NULL, align 8
  store i64 %31, i64* %7, align 8
  br label %32

32:                                               ; preds = %24, %23
  ret void
}

declare dso_local i64 @proc_find(i32) #1

declare dso_local i32 @necp_flow_add_interface_flows(i64, %struct.necp_client*, %struct.necp_client_flow_registration*, i32) #1

declare dso_local i32 @proc_rele(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
